testing anchor tag routing dubug fix

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -92,7 +92,7 @@ permalink: /
         {% endif %}
 
         <div class="exclusive-view-all-wrapper">
-            <a href="{{ site.baseurl }}/exclusive-products/" class="exclusive-view-all-link">
+            <a href="{{ '/exclusive-products/' | relative_url }}" class="exclusive-view-all-link">
                 VIEW FULL EXCLUSIVE CATALOGUE
             </a>
         </div>
