Image issue and Link issue fixed

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -40,7 +40,7 @@ permalink: /
         </div>
         
         <div class="editorial-view-all-wrapper">
-            <a href="{{ site.baseurl }}/products.html" class="editorial-view-all-link">
+            <a href="{{ '/products/' | relative_url }}" class="editorial-view-all-link">
                 VIEW ALL COLLECTIONS
             </a>
         </div>
@@ -139,7 +139,7 @@ permalink: /
         </div>
         
         <div class="endorsement-view-all-wrapper">
-            <a href="{{ site.baseurl }}/clients/" class="editorial-view-all-link">
+            <a href="{{ '/clients/' | relative_url }}" class="editorial-view-all-link">
                 VIEW FULL CLIENT ROSTER
             </a>
         </div>
