--- a/admin/index.html
+++ b/admin/index.html
@@ -7,9 +7,6 @@
     <link href="config.yml" type="text/yaml" rel="cms-config-element">
 </head>
 <body>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-    <script>
-        CMS.init();
-    </script>
+    <script src="https://unpkg.com/netlify-cms@^2.10.192/dist/netlify-cms.js"></script>
 </body>
 </html>
