--- a/admin/index.html
+++ b/admin/index.html
@@ -1,11 +1,14 @@
+---
+layout: null
+---
+
 <!doctype html>
 <html>
 <head>
   <meta charset="utf-8" />
   <title>Her Bird Admin</title>
+
   <script src="https://unpkg.com/decap-cms@3/dist/decap-cms.js"></script>
 </head>
-<body>
-  <div id="nc-root"></div>
-</body>
+<body></body>
 </html>
