--- a/admin/index.html
+++ b/admin/index.html
@@ -1,22 +1,15 @@
-<!doctype html>
+---
+layout: null
+---
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Her Bird Admin</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- Decap CMS -->
-  <script src="https://unpkg.com/decap-cms@3.9.0/dist/decap-cms.js"></script>
-</head>
-
-<body>
-
-  <!-- CMS ROOT -->
-  <div id="nc-root"></div>
-
-  <script>
-    CMS.init();
-  </script>
-
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Admin</title>
+    <script src="https://unpkg.com/decap-cms@3/dist/decap-cms.js"></script>
+  </head>
+  <body>
+    <!-- This div MUST exist or Decap crashes -->
+    <div id="nc-root"></div>
+  </body>
 </html>
