Fix Decap OAuth DNS problem

--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,8 @@ layout: null
   <head>
     <meta charset="utf-8" />
     <title>Admin</title>
+    
+    <script>window.CMS_CONFIG = "/Her-Bird/admin/config.yml";</script>
     <script src="https://unpkg.com/decap-cms@3/dist/decap-cms.js"></script>
   </head>
   <body>
