vercel auth add to admin-onfig 3

--- a/admin/index.html
+++ b/admin/index.html
@@ -1,23 +1,20 @@
----
-layout: null
----
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Admin</title>
+  <head>
+    <meta charset="utf-8" />
+    <title>Her Bird Admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Explicit config path -->
-  <script>
-    window.CMS_CONFIG = "/Her-Bird/admin/config.yml";
-  </script>
+    <!-- Tell Decap where the config.yml is -->
+    <script>
+      window.CMS_CONFIG = "/Her-Bird/admin/config.yml";
+    </script>
 
-  <!-- Load Decap -->
-  <script src="https://unpkg.com/decap-cms@3/dist/decap-cms.js"></script>
-</head>
-<body>
-
-<div id="nc-root"></div>
-
-</body>
+    <!-- Load Decap CMS (3.x) -->
+    <script src="https://unpkg.com/decap-cms@3/dist/decap-cms.js"></script>
+  </head>
+  <body>
+    <!-- This div is where Decap will render the UI -->
+    <div id="nc-root"></div>
+  </body>
 </html>
