--- a/admin/index.html
+++ b/admin/index.html
@@ -8,5 +8,129 @@
 </head>
 <body>
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script>
+        // Load config from correct path
+        const config = {
+            backend: {
+                name: "github",
+                repo: "rinshad-gif/Her-Bird",
+                branch: "main",
+                base_url: "https://decap-oauth-21vi.vercel.app",
+                auth_endpoint: "api/auth",
+                auth_scope: "repo"
+            },
+            load_config_file: false,
+            media_folder: "assets/images/uploads",
+            public_folder: "/assets/images/uploads",
+            publish_mode: "editorial_workflow",
+            // PASTE YOUR ENTIRE COLLECTIONS CONFIG HERE
+            collections: [
+  {
+    name: "products",
+    label: "Products",
+    folder: "_products",
+    create: true,
+    slug: "{{slug}}",
+    fields: [
+      { label: "Product Name", name: "name", widget: "string" },
+      { label: "Slug", name: "slug", widget: "string" },
+      { label: "Short Description", name: "description", widget: "text" },
+      { label: "Full Description", name: "body", widget: "markdown" },
+      { label: "Price", name: "price", widget: "number", value_type: "float" },
+      { label: "Original Price", name: "original_price", widget: "number", value_type: "float", required: false },
+      { label: "Offer/Discount", name: "offer", widget: "string", required: false },
+      { label: "Category", name: "category", widget: "string" },
+      { label: "Subcategory", name: "subcategory", widget: "string", required: false },
+      { label: "Featured Product", name: "featured", widget: "boolean", default: false },
+      { label: "Main Image", name: "image", widget: "image" },
+      {
+        label: "Gallery Images",
+        name: "gallery",
+        widget: "list",
+        required: false,
+        fields: [
+          { label: "Image", name: "image", widget: "image" },
+          { label: "Alt Text", name: "alt", widget: "string", required: false }
+        ]
+      },
+      {
+        label: "Product Specifications",
+        name: "specifications",
+        widget: "object",
+        fields: [
+          { label: "Material", name: "material", widget: "string" },
+          { label: "Care Instructions", name: "care", widget: "text" },
+          { label: "Available Sizes", name: "sizes", widget: "string" },
+          { label: "Available Colors", name: "colors", widget: "string" },
+          { label: "Season", name: "season", widget: "select", options: ["All Season", "Spring", "Summer", "Fall", "Winter"], default: "All Season" }
+        ]
+      },
+      { label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD" }
+    ]
+  },
+  {
+    name: "exclusive_products",
+    label: "Exclusive Products",
+    folder: "_exclusive_products",
+    create: true,
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}",
+    fields: [
+      { label: "Product Name", name: "name", widget: "string" },
+      { label: "Slug", name: "slug", widget: "string" },
+      { label: "Short Description", name: "description", widget: "text" },
+      { label: "Full Description", name: "body", widget: "markdown" },
+      { label: "Price", name: "price", widget: "number", value_type: "float" },
+      { label: "Original Price", name: "original_price", widget: "number", value_type: "float", required: false },
+      { label: "Offer/Discount", name: "offer", widget: "string", required: false },
+      { label: "Category", name: "category", widget: "string" },
+      { label: "Subcategory", name: "subcategory", widget: "string", required: false },
+      { label: "Featured Product", name: "featured", widget: "boolean", default: false },
+      { label: "Main Image", name: "image", widget: "image" },
+      {
+        label: "Gallery Images",
+        name: "gallery",
+        widget: "list",
+        required: false,
+        fields: [
+          { label: "Image", name: "image", widget: "image" },
+          { label: "Alt Text", name: "alt", widget: "string", required: false }
+        ]
+      },
+      {
+        label: "Product Specifications",
+        name: "specifications",
+        widget: "object",
+        fields: [
+          { label: "Material", name: "material", widget: "string" },
+          { label: "Care Instructions", name: "care", widget: "text" },
+          { label: "Available Sizes", name: "sizes", widget: "string" },
+          { label: "Available Colors", name: "colors", widget: "string" },
+          { label: "Season", name: "season", widget: "select", options: ["All Season", "Spring", "Summer", "Fall", "Winter"], default: "All Season" }
+        ]
+      },
+      { label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD" }
+    ]
+  },
+  {
+    name: "testimonials",
+    label: "Testimonials",
+    folder: "_testimonials",
+    create: true,
+    slug: "{{year}}-{{month}}-{{day}}-{{client_name | slugify}}",
+    fields: [
+      { label: "Client Name", name: "client_name", widget: "string" },
+      { label: "Client Location", name: "client_location", widget: "string" },
+      { label: "Company", name: "company", widget: "string", required: false },
+      { label: "Description", name: "description", widget: "text", required: false },
+      { label: "Content", name: "content", widget: "text", required: false },
+      { label: "Featured", name: "featured", widget: "boolean", default: true },
+      { label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD" }
+    ]
+  }
+]
+        };
+        
+        CMS.init({ config });
+    </script>
 </body>
 </html>
