vercel auth add to admin-onfig 11

--- a/admin/index.html
+++ b/admin/index.html
@@ -5,24 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Her Bird Admin</title>
     <!-- <base href="/Her-Bird/"> -->
+
+    <script>
+        if (!location.href.endsWith("/")) {
+          location.href = location.href + "/";
+        }
+      </script>
+      
 </head>
 <body>
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
     <script>
         // Load config from correct path
-        const config = {
-            backend: {
-                name: "github",
-                repo: "rinshad-gif/Her-Bird",
-                branch: "main",
-                base_url: "https://decap-oauth-21vi.vercel.app",
-                auth_endpoint: "api/auth",
-                auth_scope: "repo"
-            },
-            load_config_file: false,
-            media_folder: "assets/images/uploads",
-            public_folder: "/assets/images/uploads",
-            publish_mode: "editorial_workflow",
+    const config = {
+        backend: {
+          name: "github",
+          repo: "rinshad-gif/Her-Bird",
+          branch: "main",
+          base_url: "https://decap-oauth-21vi.vercel.app",
+          auth_endpoint: "api/auth",
+          auth_scope: "repo"
+        },
+    
+        load_config_file: false,
+        media_folder: "assets/images/uploads",
+        public_folder: "/assets/images/uploads",
+        publish_mode: "editorial_workflow",
             // PASTE YOUR ENTIRE COLLECTIONS CONFIG HERE
             collections: [
   {
