SEO heading updated and animation scrolling error debuged(commanted the code)

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -8,6 +8,22 @@ permalink: /
 
 {% include hero.html %}
 
+<style>
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+</style>
+
+<h1 class="visually-hidden">Her Bird Boutique – Premium Women’s Fashion</h1>
+
 <section class="fashion-featured-section">
     <div class="fashion-container">
         <h2 class="editorial-heading">The Latest Collection</h2>
