Repo name changed so base url changed to null

--- a/_pages/search.html
+++ b/_pages/search.html
@@ -258,6 +258,7 @@ permalink: /search/
             display: -webkit-box;
             -webkit-box-orient: vertical;
             -webkit-line-clamp: 2;
+            line-clamp: 2;
             overflow: hidden;
         }
     
