all sub urls connection removed and | relative_url removed

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -63,7 +63,7 @@ permalink: /
         </div>
         
         <div class="editorial-view-all-wrapper">
-            <a href="{{ '/products/' | relative_url }}" class="editorial-view-all-link">
+            <a href="/products/" class="editorial-view-all-link">
                 VIEW ALL COLLECTIONS
             </a>
         </div>
@@ -116,7 +116,7 @@ permalink: /
         {% endif %}
 
         <div class="exclusive-view-all-wrapper">
-            <a href="{{ '/exclusive-products/' | relative_url }}" class="exclusive-view-all-link">
+            <a href="/exclusive-products/" class="exclusive-view-all-link">
                 VIEW FULL EXCLUSIVE CATALOGUE
             </a>
         </div>
@@ -158,7 +158,7 @@ permalink: /
       {% endif %}
   
       <div class="endorsement-view-all-wrapper">
-        <a href="{{ '/clients/' | relative_url }}" class="editorial-view-all-link">
+        <a href="/clients/" class="editorial-view-all-link">
           VIEW FULL CLIENT ROSTER
         </a>
       </div>
