--- a/_pages/search.html
+++ b/_pages/search.html
@@ -326,6 +326,6 @@ permalink: /search/
 </div>
 
 
-<script src="{{ '/assets/js/search.js' | relative_url }}"></script>
+<script src="/assets/js/search.js"></script>
 
 
