Fix product image URLs for root site

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -36,7 +36,7 @@ permalink: /
                     <a href="{{ product.url | relative_url }}" class="product-image-link">
                         <div class="product-image-wrapper">
                             {% if product.image %}
-                            <img src="{{ product.image | relative_url }}" alt="{{ product.name }}" class="editorial-product-image">
+                            <img src="{{ site.url }}{{ product.image }}" alt="{{ product.name }}" class="editorial-product-image">
                             <div class="product-hover-overlay" loading="lazy" 
                             decoding="async">
                                 <span class="quick-view-text">Quick View</span>
@@ -80,7 +80,7 @@ permalink: /
             <div class="exclusive-main-feature">
                 <div class="exclusive-image-display">
                     {% if main_exclusive_product.image %}
-                        <img src="{{ main_exclusive_product.image | relative_url }}" 
+                        <img src="{{ site.url }}{{ main_exclusive_product.image }}" 
                              alt="{{ main_exclusive_product.name }}" 
                              class="exclusive-main-image" loading="lazy" 
                              decoding="async">
