--- a/admin/index.html
+++ b/admin/index.html
@@ -3,14 +3,29 @@
 <head>
   <meta charset="utf-8" />
   <title>Her Bird Admin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script>
+    // Ensure we have a trailing slash (your existing fix)
     if (!location.href.endsWith("/")) {
       location.href += "/";
     }
   </script>
 </head>
 <body>
-  <script src="https://unpkg.com/decap-cms@^3/dist/decap-cms.js"></script>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  
+  <script src="https://unpkg.com/decap-cms@^3/dist/decap-cms.js"></script>
+
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
 </body>
 </html>
