for bing seo page titles are added

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Home
-seo_title: Her Bird Boutique – Premium Women’s Fashion Online
+seo_title: Her Bird Boutique
 description: Shop premium women’s fashion at Her Bird Boutique. Elegant designs, timeless styles, exclusive collections.
 permalink: /
 ---
